Learnt about *args and *kwargs

--- a/4-Functions/4.1-functions.ipynb
+++ b/4-Functions/4.1-functions.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,12 +73,12 @@
     "    if num%2==0:\n",
     "        print(\"the number is even\")\n",
     "    else:\n",
-    "        print(\"the number is odd\")\n"
+    "        print(\"the number is odd\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -154,10 +154,18 @@
     }
    ],
    "source": [
+    "### Function with default parameter won't give an error if parameter is not passed\n",
     "def greet(name=\"Guest\"):\n",
     "    print(f\"Hello {name} Welcome To the paradise\")\n",
     "\n",
     "greet(\"Krish\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Argument and Keyword Argument"
    ]
   },
   {
@@ -378,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
